welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: not found: value Fizz
    return Fizz
           ^fizzBuzz:6: error: not found: value Buzz
    return Buzz
           ^fizzBuzz:9: error: not found: value Fizz
    return Fizz Buzz
           ^